# novus-boot

./: Cargo.toml  Makefile  README.md  build.sh
boot/: Cargo.toml
boot/src/: boot.rs  error.rs  kernel.rs  lib.rs  main.rs
boot/src/kernel/: mod.rs  start.rs  types.rs
boot/src/proto/: fs.rs  graphics.rs  mod.rs  text.rs
command/: Cargo.toml  README.md  build.sh
command/src/: main.rs
example/: Cargo.toml
example/src/: main.rs
gen_image/: Cargo.toml
gen_image/src/: main.rs
novus-image/novus-image/: Cargo.toml
novus-image/novus-image/src/: main.rs
novus-image/src/: main.rs
src/: fs.rs  gop.rs  kernel.rs  lib.rs  main.rs
src/bios_boot/: mod.rs
src/boot/: main.rs
src/uefi_boot/: boot.rs
tools/gen-uefi-image/: Cargo.toml
